--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <meta http-equiv='X-UA-Compatible' content='chrome=1'></meta>
 <meta http-equiv='Content-Type' content='text/html;charset=utf-8'></meta>
-<title>Titulo pestaña</title>
+<title>modelo</title>
 <script type='text/javascript' src='https://www.x3dom.org/download/x3dom.js'> </script>
 <link rel='stylesheet' type='text/css' href='https://www.x3dom.org/download/x3dom.css'/>
 </head>
 <body>
-<h1>Cabecera página</h1>
+<h1>Modelo de la práctica</h1>
 <p>
-    Texto previo
+    Relieve Burney La Reina de la noche 
 </p>
 <x3d width='800px' height='800px'>
 <scene>
@@ -19,7 +19,7 @@
 </scene>
 </x3d>
 <p>
-    Texto final
+    Modelo en 3D
 </p>
   </body>
 </html>
